# my-data

./: '  .env.template  .gitignore  Cargo.toml  README.md  docker-compose.yml
db-postgresql-docker/: docker-compose.yml
migrations/2022-10-22-150411_create_person/: up.sql
migrations/2022-10-22-150411_create_user/: up.sql
migrations/2023-01-07-031637_create_finance_incexp/: down.sql  up.sql
migrations/2023-01-07-035524_create_finance_currency/: down.sql  up.sql
migrations/2023-01-07-035534_create_finance_worthstat/: down.sql  up.sql
migrations/2023-01-08-015028_finance_transaction_type/: up.sql
migrations/2023-01-08-015047_finance_category/: up.sql
migrations/2023-01-08-020126_finance_incexp/: up.sql
migrations/2023-01-22-003341_create_finance_transaction_type/: down.sql  up.sql
migrations/2023-01-22-003422_create_finance_category/: down.sql  up.sql
migrations/2023-01-22-003439_create_finance_account_type/: down.sql  up.sql
migrations/2023-01-22-003504_create_finance_account/: down.sql  up.sql
migrations/2023-01-22-003529_create_finance_account_balance/: down.sql  up.sql
migrations/2023-01-22-003559_create_finance_transaction/: down.sql  up.sql
migrations/2023-01-22-145210_create_testing_data/: down.sql  up.sql
migrations/2023-07-15-175051_create_schema_financial/: down.sql  up.sql
migrations/2023-07-16-205614_create_persons/: up.sql
migrations/2023-07-16-205917_create_emails/: up.sql
migrations/2023-07-16-211629_create_currencies/: down.sql  up.sql
migrations/2023-07-16-212210_create_transaction_types/: down.sql  up.sql
migrations/2023-07-16-212450_create_transaction_actions/: down.sql  up.sql
migrations/2023-07-16-225310_create_bank_account_types/: down.sql  up.sql
migrations/2023-07-16-225612_create_bank_accounts/: down.sql  up.sql
migrations/2023-07-16-225909_create_bank_account_balance_history/: down.sql  up.sql
migrations/2023-07-16-230239_create_transaction_tags/: down.sql  up.sql
migrations/2023-07-16-233237_create_transaction_groups/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/: mod.rs  person.rs  user.rs
(+48 files in other folders)
