[package]
name = "ozone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
chrono = { version = "0.4.22", features = ["serde"]}
diesel = { version = "2.0.2", features = ["mysql","chrono","r2d2"] }
dotenv = "0.15.0"
env_logger = "0.9.1"
futures = "0.3.24"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
