[package]
name = "my-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
chrono = { version = "0.4.23", features = ["serde"]}
diesel = { version = "2.0.2", features = ["postgres","chrono","r2d2"] }
dotenvy = "0.15.6"
env_logger = "0.9.1"
futures = "0.3.24"
jsonwebtoken = "8.3.0"
log = "0.4.17"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.24.1", features = ["full"] }
