[package]
name = "my-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
chrono = { version = "0.4.34", features = ["serde"]}
diesel = { version = "2.1.4", features = ["postgres","chrono","r2d2","numeric"] }
bigdecimal = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.30"
jsonwebtoken = "9.2.0"
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
